# 5580-dm-a4-regression-ts

./: AS4.docx  AS4.md  DOCUMENTATION.md  GPU_FIX_WALKTHROUGH.md  MLP_regressor.ipynb  README.md  idea.txt  linear_regression.ipynb  main.py  pyproject.toml
code/: connection.ipynb  connection_preprocessing.ipynb  cuda.ipynb  extract_params.py  final_retrain.py  fix_cuda_paths.sh  gpu_health_check.py  linear_regression.ipynb  linear_regression_advanced.ipynb  run_health_check.sh  sorted_final_results.csv  tuning_results.ipynb  utils.py  verify_gpu.py
report/: .xdp-main.log-4fxRnS  Makefile  dsfonts.sty  includes.tex  kpfonts.sty  main.tex  notation.tex  references.bib  title_page.tex
report/appendices/: appendix_a.tex
report/chapters/: 0_title_page.tex  1_introduction.tex  2_methodology.tex  3_modeling.tex  4_results.tex  5_summary.tex  6_appendix.tex
report/figures/: electricity_study.pkl
results/: extract_params.json  final_df_results.pkl  final_test_results.csv  optuna_trials_final.csv
src/gpu_setup/: README.md  __init__.py
src/gpu_setup/docs/: QUICK_START.md  SETUP_DETAILS.md  TROUBLESHOOTING.md
src/gpu_setup/scripts/: cleanup_broken_links.sh  fix_cuda_paths.sh
src/gpu_setup/tools/: diagnose_cuda.py  gpu_recovery.py  verify_setup.py
src/workflow/: PATH_CONSTANTS_GUIDE.md  QUICK_REFERENCE.md  README.md  __init__.py  notebook_utils.py
src/workflow/notebooks/: 3_advanced_models_and_eda.ipynb  4_hyperparameter_tuning.ipynb  5_analyze_tuning_results.ipynb
src/workflow/scripts/: 1_extract_best_params.py  2_final_retrain_and_evaluate.py  utils.py
