[project]
name = "5580-dm-a4-regression-ts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "nvidia-cudnn-cu12>=9.19.0.56",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorflow>=2.20.0",
    "ty>=0.0.15",
    "xgboost>=3.1.3",
]
